g265-HANDOFF : transmission de compression au successeur (JOURNAL + MEMORY)
Grave le handoff complet exige par l'utilisateur avant compression de contexte : procedure de reprise a
appliquer EN ENTIER, enumeration des 8 regles obligatoires, etat certifie (format 535/535, RNG bit-exacte
en sync, comptes de particules exacts), LE bloquant unique (composante position ~-241px, champ 0x188 /
updateParticles vectorise a decoder), prochaines etapes ordonnees et commandes cles. MEMORY pointe vers
l'entree g265-HANDOFF. Le successeur doit lire g265/g264-PHYS/g264-ETAT + derniers commits, enumerer les
regles, puis faire un RECAP avant de reprendre.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VxHVce2pXBw4CVoLcnjLPW